ACC-9727: (UserSwitcher™️) Ensure <select> does not cause horizontal scroll

--- a/app/src/styles/ifspa-developer-section.css
+++ b/app/src/styles/ifspa-developer-section.css
@@ -4,3 +4,7 @@
   padding-top: 15px;
   padding-bottom: 1px;
 }
+
+.ifspa-developer-section-select {
+  width: 100%;
+}
